--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 </head>
 <body>
-  <iframe id="video" src="//www.youtube.com/embed/4kosEG2rxf4?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <iframe id="video" src="https://www.youtube.com/embed/4kosEG2rxf4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <script>
     $(function(){
       $('#video').css({ width: $(window).innerWidth() + 'px', height: $(window).innerHeight() + 'px' });
