--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bertrand Russell had all that hustle</title>
+  <title>Bertrand Russell had that hustle</title>
   <style>
     html,body {
       padding: 0;
